# libdataobj

./: CMakeLists.txt  DataObject.cpp  DataObject.h  JsonParser.cpp  JsonParser.h  SPointer.h
tests/: Mods.cpp  Mods.h  Tests.cpp
